# ecosistema-datos

./: .gitignore  README.md  chatbot.py  main.py  pyproject.toml
apis/: api_gbif.py
main_chatbot/: main_chatbot.py
notebooks/: analisis_gpkg.ipynb  benchmark_extract.ipynb  convert_gpkg_to_geoparquet.ipynb
notebooks/demo_tecnica/: 01_Modelo_Biomasa_GEDI_RandomForest.ipynb  02_Analisis_Estructura_Dosel_Meta.ipynb  03_Conectividad_Ecologica_GBIF.ipynb  04_Validacion_Datos_Crudos_NASA.ipynb  README.md
src/Analysis/: biodiversity.py  extract_raster.py  extract_vector.py  satellite_fetch.py
src/apis/: api_datos_abiertos.py
src/chatbot/: main_chatbot.py  prompt_builder.py  utils.py
src/polygons/: polygon_module.py  seleccion_poligono.py
src/reports/: generate_reports.py
