[project]
name = "ecosistema-datos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.7.0",
    "earthpy>=0.9.4",
    "folium>=0.20.0",
    "geemap>=0.36.6",
    "geopandas>=1.1.1",
    "groq>=0.36.0",
    "h5py>=3.15.1",
    "harmony-py>=0.4.14",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pygbif>=0.6.6",
    "pystac-client>=0.9.0",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "streamlit>=1.51.0",
    "streamlit-folium>=0.25.3",
]
